syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (TokenRequest) returns (UserPayload);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}

message TokenRequest {
  string token = 1;
}

message UserPayload {
  string _id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string avatar = 5;
  repeated string role = 6;
}